--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,6 @@ Check out our upcoming events:
 
 |        Date          |    Time     | Streamers                                             | Show                                                               |
 | :------------------: | :---------: | :---------------------------------------------------- | :----------------------------------------------------------------- |
-|  Tuesday, August 2   | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                                     |
 | Wednesday, August 3  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve Works on Redis OM .NET                                       |
 |  Tuesday, August 9   | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                                     |
 | Wednesday, August 10 | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                                  |
@@ -48,6 +47,7 @@ Past events:
 
 |        Date          |    Time     | Streamers                                             | Show                                                                     |
 | :------------------: | :---------: | :---------------------------------------------------- | :----------------------------------------------------------------------- |
+|  Tuesday, August 2   | 6:00 PM UTC | [Savannah Norem][norem]                               | [savannah_streams_in_snake_case][9]                                      |
 |   Friday, July 29    | 4:00 PM UTC | [Savannah Norem][norem], [Simon Prickett][simon]      | [First Steps to Open Source Contribution][8]                             |
 |  Thursday, July 28   | 3:00 PM UTC | [Simon Prickett][simon]                               | Up and Running with RU203: Querying, Indexing and Full-Text Search       |
 |  Wednesday, July 27  | 6:00 PM UTC | [Steve Lorello][steve]                                | [Steve Works on cli.redis.io][7]                                         |
@@ -88,6 +88,7 @@ Past events:
 [yt]: https://www.youtube.com/redisinc
 
 <!-- Links to specific videos -->
+[9]: https://www.youtube.com/watch?v=y5VXze8xtEA
 [8]: https://www.youtube.com/watch?v=SnKeNYJ_qsQ
 [7]: https://www.youtube.com/watch?v=68FDI5GlMIU
 [6]: https://www.youtube.com/watch?v=_TGJSXZvLT8
