--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -53,8 +53,8 @@ Past events:
 
 |         Date          |    Time     | Streamers                                                                                             | Show                                                                     |
 | :-------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------- |
-| Friday, September 16    | 5:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [This Week On Discord][twitch]  
-| Thursday, September 15  | 3:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Weekly Redis University Office Hours][officehrs]                  |                                   |
+| Friday, September 16  | 5:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [This Week On Discord][29]                                               |
+| Thursday, September 15| 3:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Weekly Redis University Office Hours][officehrs]                        |
 | Friday, September 9   | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][28]                                               |
 | Thursday, September 8 | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                        |
 | Thursday, September 8 | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 1][27]      |
@@ -118,6 +118,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[29]: https://www.youtube.com/watch?v=fpgJuAnsVzA
 [28]: https://www.youtube.com/watch?v=F4mAMJWT1vg
 [27]: https://www.youtube.com/watch?v=8Q3jK5CAfNQ
 [26]: https://www.youtube.com/watch?v=_-YmsyWUQNo
